k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: rag-backend
  labels:
    app: rag-backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: rag-backend

  template:
    metadata:
      labels:
        app: rag-backend

    spec:
      containers:
        - name: rag-backend

          image: 348389439074.dkr.ecr.eu-north-1.amazonaws.com/rag-app:latest

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "1000m"
              memory: "1Gi"

          readinessProbe:
            httpGet:
              path: /docs
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /docs
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
