k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: rag-backend-service

spec:
  selector:
    app: rag-backend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
