k8s/rag-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: rag-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rag-backend-service
            port:
              number: 80
